$dati variable renamed to $data user_tokens unique and auto cleaned for remember cookie pre-search events now works with support_data and simple select field type added csrf in permission's limits management bugfixes apexcharts for float values date validation in multiple columns charts align right for datatable's columns with totalable values

--- a/template/adminlte_custom/custom.css
+++ b/template/adminlte_custom/custom.css
@@ -221,3 +221,6 @@ table tr td {
 .firegui_verticalaligntop {
   vertical-align:top!important;
 }
+.dt-right {
+  text-align: right;
+}
